feat: :sparkles: send welcome email

--- a/.env
+++ b/.env
@@ -3,3 +3,13 @@
 
 # JWT OPTIONS
 JWT_SECRET='THIS IS A RANDOM SECRET KEY'
+
+# MAIL OPTIONS
+MAIL_MAILER=smtp
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_SECURE=
+MAIL_FROM_ADDRESS="welcome@socialnet.com"
+MAIL_FROM_NAME="SocialNet"
