feat: :sparkles: dockerize app

--- a/.env
+++ b/.env
@@ -6,10 +6,14 @@ JWT_SECRET='THIS IS A RANDOM SECRET KEY'
 
 # MAIL OPTIONS
 MAIL_MAILER=smtp
-MAIL_HOST=localhost
+MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USER=
 MAIL_PASSWORD=
 MAIL_SECURE=
 MAIL_FROM_ADDRESS="welcome@socialnet.com"
 MAIL_FROM_NAME="SocialNet"
+
+# REDIS OPTIONS (FOR QUEUES)
+REDIS_HOST=redis
+REDIS_PORT=6379
