feat: :sparkles: change database config to postgres

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 #DATABASE OPTIONS
-
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=socialnet
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 
 # JWT OPTIONS
 JWT_SECRET='THIS IS A RANDOM SECRET KEY'
