fix: :bug: implements correctly access and refresh tokens for login and logout

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 #DATABASE OPTIONS
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=socialnet
 POSTGRES_USER=postgres
@@ -10,7 +10,7 @@ JWT_SECRET='THIS IS A RANDOM SECRET KEY'
 
 # MAIL OPTIONS
 MAIL_MAILER=smtp
-MAIL_HOST=localhost
+MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USER=
 MAIL_PASSWORD=
@@ -19,5 +19,5 @@ MAIL_FROM_ADDRESS="welcome@socialnet.com"
 MAIL_FROM_NAME="SocialNet"
 
 # REDIS OPTIONS (FOR QUEUES)
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
